# DGB_assistent

./: .gitignore  README.md
dgb-assistent/: .env.example  .gitignore  AUTO_UPDATE_SETUP.md  BUG_FIXES_SUMMARY.md  BUILD_COMPLETE.md  DGB-Assistent.spec  INTERFACE_UPDATES.md  LICENSE  README.md  SARA_UPLOAD_GUIDE.md  build.bat  build.ps1  build.spec  create-installer.ps1  demo_update.py  install.bat  make-distribution.ps1  pyproject.toml  requirements.txt  setup.py  test_api.py  test_api_setup.py  test_sara_app.py  test_simplified_setup.py
dgb-assistent/DGB-Assistent-Distribution/: Installation Guide.txt
dgb-assistent/DGB-Assistent-M-Drive-Package/: BRUGER-INSTRUKTIONER.txt  install-to-m-drive.bat  opret-genvej.bat
dgb-assistent/src/: config.py  main.py
dgb-assistent/src/apps/: __init__.py
dgb-assistent/src/apps/image_tools/: __init__.py  group_processor.py  individual_processor.py  museum_organizer.py  simple_resizer.py
dgb-assistent/src/assets/: styles.css
dgb-assistent/src/gui/: main_window.py
dgb-assistent/src/utils/: axiell_api.py  helpers.py  sara_browser_uploader.py  sara_uploader.py  secure_config.py  settings.py  updater.py
