[tool]
name = "my-python-app"
version = "0.1.0"
description = "A Python application with a GUI that can be installed on any computer without requiring Python."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"